--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
       <li>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
       </li>
+      <li>
+        <%= link_to "mypage", user_path(current_user.id) %>
+      </li>
     <% else %>
       <li>
         <%= link_to "signup", new_user_registration_path %>
