--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,35 @@
-<% @tweets.each do |tweet| %>
-<div>
-  <%= attachment_image_tag tweet, :image %>
-  <p>本文：<%= tweet.body %></p>
-  <p>ユーザーネーム：<%= tweet.user.name %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th>投稿画像</th>
+            <th></th>
+            <th>ユーザー名</th>
+            <th>コメント数</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @tweets.each do |tweet| %>
+            <tr>
+              <td>
+                <%= link_to tweet_path(tweet) do %>
+                <%= attachment_image_tag tweet, :image, size: "200x200" %>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to user_path(tweet.user) do %>
+                <%#= attachment_image_tag(tweet.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg") %>
+                <% end %>
+              </td>
+              <td><%= tweet.user.name %></td>
+              <td><%= tweet.tweet_comments.count %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
-<% end %>
