いいね機能非同期通信化　　フォロー機能　追加

--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,34 +1,20 @@
 <%= attachment_image_tag @tweet, :image %>
   <p>本文：<%= @tweet.body %></p>
   <p>ユーザーネーム：<%= @tweet.user.name %></p>
-  <p>コメント数:<%= @tweet.tweet_comments.count %></p>
+  <p id="comments-count">コメント数:<%= @tweet.tweet_comments.count %></p>
   <p>投稿日時：<%= @tweet.created_at.strftime('%Y年%m月%d日') %></p>
   <% if @tweet.user == current_user %>
   <%= link_to "削除", tweet_path(@tweet), method: :delete %>
   <% end %>
-   <% if @tweet.favorited_by?(current_user) %>
-    <p>
-      <%= link_to tweet_favorites_path(@tweet), method: :delete do %>
-        ♥<%= @tweet.favorites.count %> いいね
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to tweet_favorites_path(@tweet), method: :post do %>
-        ♡<%= @tweet.favorites.count %> いいね
-      <% end %>
-    </p>
-  <% end %>
-  <% @tweet.tweet_comments.each do |tweet_comment| %>
-  <%= tweet_comment.user.name %>
-  <%= tweet_comment.created_at.strftime('%Y/%m/%d') %><%= tweet_comment.comment %>
-   <% if tweet_comment.user == current_user %>
-  <div class="comment-delete">
-    <%= link_to "削除", tweet_tweet_comment_path(tweet_comment.tweet, tweet_comment), method: :delete %>
+  <div id="favorite-<%= @tweet.id %>">
+    <%= render 'tweets/favorites', tweet: @tweet %>
   </div>
-  <% end %>
-<% end %>
-  <%= form_with(model:[@tweet, @tweet_comment], local: true) do |f| %>
+ <table id="tweet_comments">
+   <div id="target_comments">
+     <%= render 'tweet_comments/index', tweet: @tweet %>
+   </div>
+ </table>
+  <%= form_with(model:[@tweet, @tweet_comment], remote: true) do |f| %>
   <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
   <%= f.submit "送信する" %>
 <% end %>
