--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
-<%= attachment_image_tag user, :profile_image, size: "200x200", format:'jpeg', fallback: "no_image.jpg", class:"effect" %>
+<%= attachment_image_tag @user, :profile_image, fallback: "no-image-icon.jpg", size: "200x200", class:"effect" %>
 <p>ユーザー名: <%= @user.name %></p>
-<p>本文: <%= @user.profile %></p>
+<p>紹介文: <%= @user.profile %></p>
+<% if @user.id != current_user.id %>
+  <%= render "users/follow_btn", user: @user %>
+<% end %>
 <% if @user.id == current_user.id %>
   <%= link_to "ユーザー編集", edit_user_path(@user) %>
-<% end %>  
+<% end %>
