--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -8,6 +8,7 @@
             <th></th>
             <th>ユーザー名</th>
             <th>コメント数</th>
+            <th>いいね数</th>
             <th colspan="3"></th>
           </tr>
         </thead>
@@ -26,6 +27,7 @@
               </td>
               <td><%= tweet.user.name %></td>
               <td><%= tweet.tweet_comments.count %></td>
+              <td><%= tweet.favorites.count %></td>
             </tr>
           <% end %>
         </tbody>
